# agile_quadrotor

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  package.xml
Auxiliary Files/apriltag/: tags.yaml
auxiliary_files/apriltag/: continuous_detection.launch
auxiliary_files/pictures/: Untitled Diagram.drawio
auxiliary_files/robot_localisation/: ekf_template.yaml
control_msg/: CMakeLists.txt  package.xml
control_msg/msg/: TargetTrajectory.msg
external_control/: CMakeLists.txt  package.xml
external_control/config/: control_param.yaml
external_control/include/external_control/: controller.h  controller_class.h  upenn_controller.h
external_control/src/: controller.cpp  controller_class.cpp  controller_node.cpp  upenn_controller.cpp
maneuvers/: CMakeLists.txt  README.md  package.xml
maneuvers/config/: maneuver_param.yaml
maneuvers/include/maneuvers/: circle_maneuver.h  (+6 more)
maneuvers/launch/: trajectory_launch.launch
maneuvers/src/: circle_maneuver.cpp  eth_trajectory.cpp  flip_maneuver.cpp  slit_maneuver.cpp  trajectoryPublisher.cpp  trajectoryPublisher_node.cpp  trajectory_class.cpp  ugv_follow.cpp  ugv_follow_maneuver.cpp
quadrotor_sim/: CMakeLists.txt  package.xml
quadrotor_sim/config/: quad_param.yaml
quadrotor_sim/launch/: quadrotor_circle_trajectory.launch  quadrotor_slit_trajectory.launch  quadrotor_ugv_follow_maneuver.launch
quadrotor_sim/src/: apriltag_data_transform.cpp  math_operations.cpp  quad_sim.cpp  sim_node.cpp  sim_publishers.cpp  sim_subscribers.cpp
quadrotor_sim/worlds/: basic_world.world  slit_traverse.world
(+22 files in other folders)
