<?xml version="1.0"?>
<package format="2">
  <name>control_msg</name>
  <version>0.0.1</version>
  <description>
    control_msg includes the definition for custom messages for the mavros_controllers package.
  </description>

  <maintainer email="abhijithprakash64@gmail.com">Abhijith Prakash</maintainer>
  <author email="abhijithprakash64@gmail.com">Abhijith Prakash</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
